--- a/CSS_Positioning/index.html
+++ b/CSS_Positioning/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>CSS Positioning</title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   </head>
 
   <body>
@@ -16,9 +16,9 @@
       <section>
         <h2>Square 1: Relative Position</h2>
         <div class="container">
-          <img src="./assets/images/image-1.png" alt="box with number 1"/>
-          <img id="relative-box-2" src="./assets/images/image-2.png" alt="box with number 2"/>
-          <img src="./assets/images/image-3.png" alt="box with number 3"/>
+          <img src="assets/images/image-1.png" alt="box with number 1"/>
+          <img id="relative-box-2" src="assets/images/image-2.png" alt="box with number 2"/>
+          <img src="assets/images/image-3.png" alt="box with number 3"/>
         </div>
       </section>
 
